Ensure spacing on loading spinner

--- a/src/components/SearchFilter.scss
+++ b/src/components/SearchFilter.scss
@@ -36,4 +36,5 @@
   display: block;
   margin: 0 auto;
   overflow: hidden;
+  padding: $pt-grid-size;
 }
